--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exchange-rates_2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://AlexKhomenko00.github.io/exchanger",
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -20,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
